feat(api): implement task CRUD endpoints and test
* feat(api): implement task CRUD endpoints

* test(api): improve vitest setup and database utility functions

* test(api): add task service unit / e2e tests

* fix: lint and type-check errors

* test(api): update database URL environment variable for consistency

* fix(ci): add DATABASE_URL environment variable for consistency

* fix(ci): add step to install PostgreSQL client in CI workflow

* fix: remove DATABASE_BASE_URL from .env.test and update DATABASE_URL assignment in prisma-test-util

* fix: remove DATABASE_BASE_URL and update DATABASE_URL assignment in prisma-test-util

* fix: use DB_HOST variable in database commands in prisma-test-util

* test: remove debug log for token in task.e2e.spec.ts

* fix: rename build job to test-and-build and add build step in CI workflow
