# apps/api/src/task/dto/task.response.dto.ts
@@ -1,0 +1,18 @@
+import { ApiProperty } from '@nestjs/swagger'
+
+export class TaskResponseDto {
+    @ApiProperty({ type: Number })
+    id!: number
+
+    @ApiProperty({ type: String })
+    title!: string
+
+    @ApiProperty({ type: Boolean })
+    isDone!: boolean
+
+    @ApiProperty({ type: String, format: 'date-time' })
+    createdAt!: Date
+
+    @ApiProperty({ type: String, format: 'date-time' })
+    updatedAt!: Date
+}
